--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Fix2go - Home</title>
+    <meta name="description" content="Fix2go offers fast, on-site mobile phone, tablet, and console repair in your area.">
+<meta name="keywords" content="phone repair, tablet repair, console repair, mobile repair, Fix2go">
+<meta name="author" content="Fix2go">
+
+<!-- Open Graph / Social Sharing -->
+<meta property="og:title" content="Fix2go – Mobile Repair Services">
+<meta property="og:description" content="Book fast and reliable phone, tablet, and game console repair near you.">
+<meta property="og:url" content="https://fix2go.co">
+<meta property="og:type" content="website">
+<meta property="og:site_name" content="Fix2go">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
