--- a/contact.html
+++ b/contact.html
@@ -35,8 +35,12 @@
         <main>
   <h2>Contact Us</h2>
             <h3>Other ways to reach us:</h3>
-<p><strong>Email:</strong> <a href="mailto:support@fix2go.co">support@fix2go.co</a></p>
-<p><strong>Phone:</strong> <a href="tel:8285826215">(828) 582-6215</a></p> <br>
+<p>
+  <strong>Email:</strong> <a href="mailto:support@fix2go.co">support@fix2go.co</a><br>
+  <strong>Phone:</strong> <a href="tel:8285826215">(828) 582-6215</a><br>
+  Or just fill out the form below.
+</p>
+<br>
   <form action="https://formsubmit.co/support@fix2go.co" method="POST">
     <input type="hidden" name="_captcha" value="false">
     <input type="hidden" name="_subject" value="New contact form submission from Fix2go!">
