--- a/index.html
+++ b/index.html
@@ -134,6 +134,16 @@
   <footer>
     <p>&copy; 2025 Fix2Go – Mobile Device Repair in Tampa, FL</p>
   </footer>
+  <section class="section">
+  <h2>Contact Fix2Go</h2>
+  <p style="text-align: center; font-size: 1.1em;">
+    Have a question or want to book directly? Reach out to us:
+  </p>
+  <div style="text-align: center; margin-top: 20px;">
+    <p><strong>Email:</strong> <a href="mailto:support@fix2go.co">support@fix2go.co</a></p>
+    <p><strong>Phone:</strong> <a href="tel:+18285826215">(828) 582-6215</a></p>
+  </div>
+</section>
 
 </body>
 </html>
