--- a/index.html
+++ b/index.html
@@ -96,6 +96,14 @@
   </style>
 </head>
 <body>
+  <nav style="background:#222; padding: 15px; text-align: center;">
+  <a href="index.html" style="color:white; margin: 0 15px; text-decoration: none;">Home</a>
+  <a href="about.html" style="color:white; margin: 0 15px; text-decoration: none;">About</a>
+  <a href="services.html" style="color:white; margin: 0 15px; text-decoration: none;">Services</a>
+  <a href="booking.html" style="color:white; margin: 0 15px; text-decoration: none;">Book</a>
+  <a href="faq.html" style="color:white; margin: 0 15px; text-decoration: none;">FAQ</a>
+  <a href="contact.html" style="color:white; margin: 0 15px; text-decoration: none;">Contact</a>
+</nav>
 
   <header>
     <h1>Fix2Go</h1>
