--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Fix2Go – Mobile Phone Repair</title>
-  <style>
+  <style> 
+    header h1 {
+      color: #009900;
+    }
     body {
       margin: 0;
       font-family: Arial, sans-serif;
