--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Fix2Go – Mobile Phone Repair</title>
   <style> 
     header h1 {
-      color: #009900;
+      color: #00cc66;
     }
     body {
       margin: 0;
