--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
   <header>
     <h1>Fix2Go</h1>
     <p>Mobile Phone & Tablet Repair – We Come to You!</p>
-    <a href="/book-appointment" class="btn">Book Now</a>
+    <a href="booking.html" class="btn">Book Now</a>
   </header>
 
   <section class="section">
