--- a/faq.html
+++ b/faq.html
@@ -70,7 +70,7 @@
 
     <div class="faq-item">
       <strong>Q: How do I book an appointment?</strong>
-      <p>A: Visit our <a href="/book-appointment">Book Appointment</a> page, fill out the form, and we’ll confirm with you shortly.</p>
+      <p>A: Visit our <a href="/booking.html">Book Appointment</a> page, fill out the form, and we’ll confirm with you shortly.</p>
     </div>
   </div>
 
