--- a/index.html
+++ b/index.html
@@ -135,10 +135,27 @@
   <section class="section">
     <h2>Before & After Repairs</h2>
     <div class="gallery">
-      <img src="https://via.placeholder.com/300x200?text=Broken+Screen" alt="Broken phone">
-      <img src="https://via.placeholder.com/300x200?text=Fixed+Screen" alt="Fixed phone">
-      <img src="https://via.placeholder.com/300x200?text=Battery+Issue" alt="Battery problem">
-      <img src="https://via.placeholder.com/300x200?text=Repaired+Device" alt="Repaired device">
+      <section class="section">
+  <h2>Before & After Repairs</h2>
+  <div class="gallery">
+    <div>
+      <img src="images/broken-phone.jpg" alt="Broken Phone">
+      <p style="text-align: center;">Broken Phone</p>
+    </div>
+    <div>
+      <img src="images/battery-problem.jpg" alt="Battery Problem">
+      <p style="text-align: center;">Battery Problem</p>
+    </div>
+    <div>
+      <img src="images/fixed-phone.jpg" alt="Fixed Phone">
+      <p style="text-align: center;">Fixed Phone</p>
+    </div>
+    <div>
+      <img src="images/repaired-device.jpg" alt="Repaired Device">
+      <p style="text-align: center;">Repaired Device</p>
+    </div>
+  </div>
+</section>
     </div>
   </section>
   
