--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
   <header>
     <h1>Fix2Go</h1>
     <p>Mobile Phone & Tablet Repair – We Come to You!</p>
+    <img src="images/hero-phone-repair.jpg"alt="Phone Repair" style="width:100%;max-width:900px; display:block; margin: 20px auto; border-radius: 8px;">
     <a href="booking.html" class="btn">Book Now</a>
   </header>
 
