--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
       </div>
     </div>
   </section>
+  <div style="text-align: center; margin: 20px 0>
 
   <section class="section">
     <h2>Before & After Repairs</h2>
