--- a/index.html
+++ b/index.html
@@ -109,9 +109,11 @@
 </nav>
 
   <header>
-    <h1>Fix2Go</h1>
-    <p>Mobile Phone & Tablet Repair – We Come to You!</p>
-    <a href="booking.html" class="btn">Book Now</a>
+    <header style="background-image: url('https://raw.githubusercontent.com/fix2go/fix2go.co/main/images/70FF015D-DD17-493C-AAF6-6787379E2D8C.PNG'); background-size: cover; background-position: center; padding: 100px 20px; text-align: center; color: white;">
+  <h1>Fix2Go</h1>
+  <p>Mobile Phone & Tablet Repair – We Come to You!</p>
+  <a href="booking.html" class="btn" style="margin-top: 20px;">Book Now</a>
+</header>
   </header>
 
   <section class="section">
