--- a/faq.html
+++ b/faq.html
@@ -44,6 +44,14 @@
   </style>
 </head>
 <body>
+  <nav style="background-color:#111; padding:10px; text-align:center;">
+  <a href="index.html" style="color:white; margin: 0 15px; text-decoration: none;">Home</a>
+  <a href="services.html" style="color:white; margin: 0 15px; text-decoration: none;">Services</a>
+  <a href="booking.html" style="color:white; margin: 0 15px; text-decoration: none;">Book</a>
+  <a href="about.html" style="color:white; margin: 0 15px; text-decoration: none;">About Us</a>
+  <a href="contact.html" style="color:white; margin: 0 15px; text-decoration: none;">Contact</a>
+  <a href="faq.html" style="color:white; margin: 0 15px; text-decoration: none;">FAQ</a>
+</nav>
 
   <div class="faq-container">
     <h1>Frequently Asked Questions</h1>
