--- a/faq.html
+++ b/faq.html
@@ -13,7 +13,7 @@
     }
     .faq-container {
       max-width: 900px;
-      margin: 10px auto;
+      margin: auto;
       background: #fff;
       padding: 40px 30px;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
