--- a/about.us.html
+++ b/about.us.html
@@ -33,7 +33,17 @@
     </header>
     <main>
         <h2>About Us</h2>
-        <p>Fix2go is a mobile electronics repair service specializing in fast, convenient, and high-quality repairs for phones, tablets, laptops, and gaming consoles.</p>
+        <p> At Fix2Go, we bring over 10 years of real-world experience in electronics and phone repair,
+            now offered through a modern, mobile service built for convenience.
+            
+            Fix2Go was created to make tech repair faster, easier, and more accesible, saving you time, gas and hassle. 
+            Backed by years of hands-on work in the industry, we specialize 
+            in on-the-spot screen repairs, battery fixes, and diagnostics - all delivered wherever you are, home, office or even a coffee shop.
+            
+            We are proud to offer same-day mobile repairs in Tampa, with most jobs done under 30 minutes.
+            Every service comes with a lifetime warranty against manufactures defects (excluding damage from cracks, water, or broken LCDs/OLEDs)
+
+            Fix2Go is fast, friendly, and built for real life.</p>
     </main>
     <footer>
         <p>&copy; 2025 Fix2go</p>
