--- a/about.us.html
+++ b/about.us.html
@@ -37,11 +37,11 @@
             now offered through a modern, mobile service built for convenience.
             
             Fix2Go was created to make tech repair faster, easier, and more accesible, saving you time, gas and hassle. 
-            Backed by years of hands-on work in the industry, we specialize 
+            Backed by years of hands-on work in the industry, we focus on
             in on-the-spot screen repairs, battery fixes, and diagnostics - all delivered wherever you are, home, office or even a coffee shop.
             
             We are proud to offer same-day mobile repairs in Tampa, with most jobs done under 30 minutes.
-            Every service comes with a lifetime warranty against manufactures defects (excluding damage from cracks, water, or broken LCDs/OLEDs)
+            Every service comes with a lifetime warranty against manufacturer defects (excluding damage from cracks, water, or broken LCDs/OLEDs)
 
             Fix2Go is fast, friendly, and built for real life.</p>
     </main>
