--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ header .btn {
 <body>
   <nav style="background:#222; padding: 15px; text-align: center;">
   <a href="index.html" style="color:white; margin: 0 15px; text-decoration: none;">Home</a>
-  <a href="about.html" style="color:white; margin: 0 15px; text-decoration: none;">About Us</a>
+  <a href="about.us.html" style="color:white; margin: 0 15px; text-decoration: none;">About Us</a>
   <a href="services.html" style="color:white; margin: 0 15px; text-decoration: none;">Services</a>
   <a href="booking.html" style="color:white; margin: 0 15px; text-decoration: none;">Book</a>
   <a href="faq.html" style="color:white; margin: 0 15px; text-decoration: none;">FAQ</a>
