--- a/booking.html
+++ b/booking.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Fix2go - Book Appointment</title>
+    <title>Fix2go - Ask a Question / Free Diagnostic / Book Appointment</title>
     <meta name="description" content="Fix2go offers fast, on-site mobile phone, tablet, and console repair in your area.">
 <meta name="keywords" content="phone repair, tablet repair, console repair, mobile repair, Fix2go">
 <meta name="author" content="Fix2go">
