--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ header .btn {
 <header>
   <h1>Fix2Go</h1>
   <p>Mobile Phone & Tablet Repair – We Come to You!</p>
-  <a href="booking.html" class="btn">Book Now</a>
+  <a href="booking.html" class="btn">Ask a Question / Free Diagnostic / Book Appointment</a>
   </header>
 
   <section class="section">
