--- a/booking.html
+++ b/booking.html
@@ -32,12 +32,12 @@
         </nav>
     </header>
     <main>
-        <h2>Book an Appointment</h2>
+        <h2>Ask a Question / Free Diagnostic / Book an Appointment</h2>
         <form action="mailto:support@fix2go.co" method="post" enctype="text/plain">
             <label for="name">Name:</label><input type="text" id="name" name="name" required><br>
             <label for="email">Email:</label><input type="email" id="email" name="email" required><br>
-            <label for="service">Service Needed:</label><input type="text" id="service" name="service" required><br>
-            <label for="date">Preferred Date:</label><input type="date" id="date" name="date" required><br>
+            <label for="service">Describe the issue or ask a question:</label><input type="text" id="service" name="service" required><br>
+            <label for="date">Preferred Date & Time (We'll confirm your appointment time after reviewing your request):</label><input type="date" id="date" name="date" required><br>
             <input type="submit" value="Book Now">
         </form>
     </main>
