--- a/services.html
+++ b/services.html
@@ -34,7 +34,7 @@
     <main>
         <h2>Our Services</h2>
         <ul>
-            <                <li>iPhone Screen Repair</li>
+            <li>iPhone Screen Repair</li>
             <li>Battery Replacement</li>
             <li>Tablet Repair</li>
             <li>Laptop Repair</li>
