--- a/services.html
+++ b/services.html
@@ -27,7 +27,7 @@
             <a href="index.html">Home</a>
             <a href="services.html">Services</a>
             <a href="booking.html">Book Appointment</a>
-            <a href="about.html">About Us</a>
+            <a href="about.us.html">About Us</a>
             <a href="contact.html">Contact</a>
         </nav>
     </header>
