--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ header .btn {
 </style>
 <header>
   <h1>Fix2Go</h1>
-  <p>Mobile Phone & Tablet Repair – We Come to You!</p>
+  <p>Mobile Phone, Tablet Repair, Lap-Top, Computer and Much More – We Come to You!</p>
   </header>
 
   <section class="section">
