--- a/services.html
+++ b/services.html
@@ -25,9 +25,9 @@
         <h1>Fix2go</h1>
         <nav>
             <a href="index.html">Home</a>
-            <a href="services.html">Services</a>
-            <a href="booking.html">Book Appointment</a>
             <a href="about.us.html">About Us</a>
+            <a href="services.html">Services</a>
+            <a href="faq.html">FAQ</a>
             <a href="contact.html">Contact</a>
         </nav>
     </header>
