--- a/about.us.html
+++ b/about.us.html
@@ -25,9 +25,9 @@
         <h1>Fix2go</h1>
         <nav>
             <a href="index.html">Home</a>
-            <a href="services.html">Services</a>
-            <a href="booking.html">Book Appointment</a>
             <a href="about.us.html">About Us</a>
+            <a href="services.html">Services</a>
+            <a href="faq.html">FAQ</a>
             <a href="contact.html">Contact</a>
         </nav>
     </header>
@@ -40,8 +40,8 @@
             Backed by years of hands-on work in the industry, we focus on
             in on-the-spot screen repairs, battery fixes, and diagnostics - all delivered wherever you are, home, office or even a coffee shop.
             
-            We are proud to offer same-day mobile repairs in Tampa, with most jobs done under 30 minutes.
-            Every service comes with a lifetime warranty against manufacturer defects (excluding damage from cracks, water, or broken LCDs/OLEDs)
+            We are proud to offer same-day in most of mobile repairs in Tampa, with jobs done under 1 hour.
+            Every service comes with a 90 days warranty against manufacturer defects (excluding damage from cracks, water, or broken LCDs/OLEDs)
 
             Fix2Go is fast, friendly, and built for real life.</p>
     </main>
