--- a/contact.html
+++ b/contact.html
@@ -23,9 +23,9 @@
 <body>
         <nav>
             <a href="index.html">Home</a>
-            <a href="services.html">Services</a>
-            <a href="booking.html">Book Appointment</a>
             <a href="about.html">About Us</a>
+            <a href="services.html">Services</a>
+            <a href="faq.html">FAQ</a>
             <a href="contact.html">Contact</a>
         </nav>
     <header>
