--- a/about.us.html
+++ b/about.us.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Fix2go - About Us</title>
+    <title>FIX2GO.CO - About Us</title>
     <meta name="description" content="Fix2go offers fast, on-site mobile phone, tablet, and console repair in your area.">
 <meta name="keywords" content="phone repair, tablet repair, console repair, mobile repair, Fix2go">
 <meta name="author" content="Fix2go">
