--- a/index.html
+++ b/index.html
@@ -258,11 +258,11 @@ header .btn {
 </section>
  
   <nav style="background:#222; padding: 15px; text-align: center;">
-  <a href="index.html" style="color:white; margin: 0 15px; text-decoration: none;">Home</a>
-  <a href="about.html" style="color:white; margin: 0 15px; text-decoration: none;">About Us</a>
-  <a href="services.html" style="color:white; margin: 0 15px; text-decoration: none;">Services</a>
-  <a href="faq.html" style="color:white; margin: 0 15px; text-decoration: none;">FAQ</a>
-  <a href="contact.html" style="color:white; margin: 0 15px; text-decoration: none;">Contact</a>
+  <a href="/index.html" style="color:white; margin: 0 15px; text-decoration: none;">Home</a>
+  <a href="/about.html" style="color:white; margin: 0 15px; text-decoration: none;">About Us</a>
+  <a href="/services.html" style="color:white; margin: 0 15px; text-decoration: none;">Services</a>
+  <a href="/faq.html" style="color:white; margin: 0 15px; text-decoration: none;">FAQ</a>
+  <a href="/contact.html" style="color:white; margin: 0 15px; text-decoration: none;">Contact</a>
 </nav>
   <footer>
     <p>&copy; 2025 Fix2Go – Mobile Device Repair in Tampa, FL</p>
