--- a/about.us.html
+++ b/about.us.html
@@ -25,7 +25,7 @@
         <h1>Fix2go</h1>
         <nav>
             <a href="index.html">Home</a>
-            <a href="about.us.html">About Us</a>
+            <a href="about.html">About Us</a>
             <a href="services.html">Services</a>
             <a href="faq.html">FAQ</a>
             <a href="contact.html">Contact</a>
